Added comments to highlight sections as said in the blog

--- a/next-2020/TPU/PyTorch_on_Cloud_TPUs.ipynb
+++ b/next-2020/TPU/PyTorch_on_Cloud_TPUs.ipynb
@@ -21,16 +21,13 @@
         "id": "RKLajLqUni6H"
       },
       "source": [
-        "## Getting Started with PyTorch on Cloud TPUs\n",
+        "## Train Your PyTorch Model on Cloud TPU\n",
         "\n",
         "This notebook will show you how to:\n",
         "\n",
         "* Install PyTorch/XLA on Colab, which lets you use PyTorch with TPUs.\n",
-        "* Run basic PyTorch functions on TPUs, like creating and adding tensors.\n",
-        "* Run PyTorch modules and autograd on TPUs.\n",
-        "* Run PyTorch networks on TPUs.\n",
-        "\n",
-        "Finally, this notebook is intended for people already familiar with PyTorch, a popular open-source deep learning framework. If you haven't used PyTorch before you might want to review the tutorials at https://pytorch.org/ before continuing.\n"
+        "* Outlines the syntactical elements use specific to TPUs.\n",
+        "\n"
       ]
     },
     {
@@ -133,6 +130,7 @@
         "import torchvision\n",
         "import torchvision.transforms as transforms\n",
         "\n",
+        "# PyTorch/XLA Library Elements\n",
         "import torch_xla\n",
         "import torch_xla.core.xla_model as xm\n",
         "import torch_xla.distributed.parallel_loader as pl\n",
@@ -243,6 +241,7 @@
         "    train_loader = torch.utils.data.DataLoader(\n",
         "        train_dataset, batch_size=FLAGS['batch_size'], shuffle=False,\n",
         "        num_workers=0, sampler=train_sampler)\n",
+        "    # PyTorch/XLA: Parallel Loader Wrapper\n",
         "    train_loader = pl.MpDeviceLoader(train_loader, device)\n",
         "\n",
         "    for epoch in range(FLAGS['epochs']):\n",
@@ -256,7 +255,7 @@
         "            # Backward and optimize\n",
         "            optimizer.zero_grad()\n",
         "            loss.backward()\n",
-        "\n",
+        "            # PyTorch/XLA: All Reduce followed by parameter update \n",
         "            xm.optimizer_step(optimizer)\n",
         "\n",
         "            if not i % FLAGS['log_steps']:\n",
@@ -281,8 +280,7 @@
         "outputId": "0d0eec33-014b-4111-fde3-20e774f4e87a"
       },
       "source": [
-        "# Distributed training on 4 TPU Chips (8 cores)\n",
-        "\n",
+        "#PyTorch/XLA: Distributed training on 4 TPU Chips (8 cores)\n",
         "xmp.spawn(train, nprocs=FLAGS['world_size'], args=(FLAGS,), start_method='fork')"
       ],
       "execution_count": 9,
