--- a/jax/mnist/mnist.ipynb
+++ b/jax/mnist/mnist.ipynb
@@ -2,36 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Registered TPU: grpc://10.20.137.146\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "import requests\n",
-    "os.environ['TPU_ADDR'] = \"10.20.137.146\"\n",
-    "\n",
-    "if 'TPU_DRIVER_MODE' not in globals():\n",
-    "    url = 'http://' + os.environ['TPU_ADDR'].split(':')[0] + ':8475/requestversion/tpu_driver0.1-dev20191206'\n",
-    "    resp = requests.post(url)\n",
-    "    TPU_DRIVER_MODE = 1\n",
-    "\n",
-    "# The following is required to use TPU Driver as JAX's backend.\n",
-    "from jax.config import config\n",
-    "config.FLAGS.jax_xla_backend = \"tpu_driver\"\n",
-    "config.FLAGS.jax_backend_target = \"grpc://\" + os.environ['TPU_ADDR']\n",
-    "print('Registered TPU:', config.FLAGS.jax_backend_target)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -49,22 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "Deadline exceeded: Failed to connect to remote server at address: grpc://10.20.137.146. Error from gRPC: Deadline Exceeded. Details: ",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-1db022db506f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjax\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdevices\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/opt/conda/envs/jax/lib/python3.6/site-packages/jax/lib/xla_bridge.py\u001b[0m in \u001b[0;36mdevices\u001b[0;34m(backend)\u001b[0m\n\u001b[1;32m    228\u001b[0m     \u001b[0mList\u001b[0m \u001b[0mof\u001b[0m \u001b[0mDevice\u001b[0m \u001b[0msubclasses\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    229\u001b[0m   \"\"\"\n\u001b[0;32m--> 230\u001b[0;31m   \u001b[0;32mreturn\u001b[0m \u001b[0mget_backend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbackend\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdevices\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    231\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    232\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/conda/envs/jax/lib/python3.6/site-packages/jax/lib/xla_bridge.py\u001b[0m in \u001b[0;36mget_backend\u001b[0;34m(platform)\u001b[0m\n\u001b[1;32m    176\u001b[0m       \u001b[0mmsg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'Unknown jax_xla_backend value \"{}\".'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    177\u001b[0m       \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mFLAGS\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjax_xla_backend\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 178\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mbackend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplatform\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    179\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    180\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/conda/envs/jax/lib/python3.6/site-packages/jax/lib/xla_bridge.py\u001b[0m in \u001b[0;36m_get_tpu_driver_backend\u001b[0;34m(platform)\u001b[0m\n\u001b[1;32m    154\u001b[0m       raise ValueError('When using TPU Driver as the backend, you must specify '\n\u001b[1;32m    155\u001b[0m                        '--jax_backend_target=<hostname>:8470.')\n\u001b[0;32m--> 156\u001b[0;31m     \u001b[0m_tpu_backend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtpu_client\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTpuBackend\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mworker\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbackend_target\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    157\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0m_tpu_backend\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    158\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/conda/envs/jax/lib/python3.6/site-packages/jaxlib/tpu_client.py\u001b[0m in \u001b[0;36mcreate\u001b[0;34m(worker, force)\u001b[0m\n\u001b[1;32m     57\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m       \u001b[0;31m# We do not cache for non-local backends.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 59\u001b[0;31m       \u001b[0;32mreturn\u001b[0m \u001b[0m_tpu_client\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTpuClient\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mworker\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m: Deadline exceeded: Failed to connect to remote server at address: grpc://10.20.137.146. Error from gRPC: Deadline Exceeded. Details: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[TpuDevice(id=0, task=0, coords=(0,0,0), core_on_chip=0), TpuDevice(id=1, task=0, coords=(0,0,0), core_on_chip=1), TpuDevice(id=2, task=0, coords=(1,0,0), core_on_chip=0), TpuDevice(id=3, task=0, coords=(1,0,0), core_on_chip=1), TpuDevice(id=4, task=0, coords=(0,1,0), core_on_chip=0), TpuDevice(id=5, task=0, coords=(0,1,0), core_on_chip=1), TpuDevice(id=6, task=0, coords=(1,1,0), core_on_chip=0), TpuDevice(id=7, task=0, coords=(1,1,0), core_on_chip=1)]\n"
      ]
     }
    ],
@@ -74,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,10 +132,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
+    "@jax.jit\n",
     "def train_step(optimizer, batch):\n",
     "    def loss_fn(params):\n",
     "        logits = mnist().apply({'params': params}, batch['image'])\n",
@@ -189,10 +152,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
+    "@jax.jit\n",
     "def eval_step(params, batch):\n",
     "    logits = mnist().apply({'params': params}, batch['image'])\n",
     "    return compute_metrics(logits, batch['label'])"
@@ -200,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,19 +238,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "learning_rate = 0.1\n",
+    "learning_rate = 0.001\n",
     "beta = 0.9\n",
-    "num_epochs = 2\n",
+    "num_epochs = 10\n",
     "batch_size = 32"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,17 +259,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training - epoch: 1, loss: 2.71403169631958, accuracy: 0.10456666350364685\n",
-      "Testing - epoch: 1, loss: 2.3091375827789307, accuracy: 0.10090000182390213\n",
-      "Training - epoch: 2, loss: 2.3141160011291504, accuracy: 0.1029166653752327\n",
-      "Testing - epoch: 2, loss: 2.3095853328704834, accuracy: 0.10279999673366547\n"
+      "Training - epoch: 1, loss: 0.1260634958744049, accuracy: 0.9616333246231079\n",
+      "Testing - epoch: 1, loss: 0.050780244171619415, accuracy: 0.9829999804496765\n",
+      "Training - epoch: 2, loss: 0.04492035135626793, accuracy: 0.9859166741371155\n",
+      "Testing - epoch: 2, loss: 0.03572174161672592, accuracy: 0.988099992275238\n",
+      "Training - epoch: 3, loss: 0.030871640890836716, accuracy: 0.9904666543006897\n",
+      "Testing - epoch: 3, loss: 0.02965500019490719, accuracy: 0.9889999628067017\n",
+      "Training - epoch: 4, loss: 0.0235484316945076, accuracy: 0.9924666881561279\n",
+      "Testing - epoch: 4, loss: 0.02583594061434269, accuracy: 0.9918999671936035\n",
+      "Training - epoch: 5, loss: 0.01658724993467331, accuracy: 0.9947166442871094\n",
+      "Testing - epoch: 5, loss: 0.031633954495191574, accuracy: 0.9907999634742737\n",
+      "Training - epoch: 6, loss: 0.01394949946552515, accuracy: 0.9955833554267883\n",
+      "Testing - epoch: 6, loss: 0.03818190097808838, accuracy: 0.9888999462127686\n",
+      "Training - epoch: 7, loss: 0.010369012132287025, accuracy: 0.9966333508491516\n",
+      "Testing - epoch: 7, loss: 0.03041226975619793, accuracy: 0.9912999868392944\n",
+      "Training - epoch: 8, loss: 0.009344744496047497, accuracy: 0.9968166947364807\n",
+      "Testing - epoch: 8, loss: 0.03692004457116127, accuracy: 0.988099992275238\n",
+      "Training - epoch: 9, loss: 0.007275506388396025, accuracy: 0.9976000189781189\n",
+      "Testing - epoch: 9, loss: 0.03822000324726105, accuracy: 0.9902999997138977\n",
+      "Training - epoch: 10, loss: 0.00675286864861846, accuracy: 0.9978833198547363\n",
+      "Testing - epoch: 10, loss: 0.038108158856630325, accuracy: 0.9902999997138977\n"
      ]
     }
    ],
@@ -347,9 +327,9 @@
    "uri": "gcr.io/deeplearning-platform-release/tf2-2-3-gpu.2-3:m55"
   },
   "kernelspec": {
-   "display_name": "jax",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "jax"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -361,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
