--- a/jax/mnist/mnist.ipynb
+++ b/jax/mnist/mnist.ipynb
@@ -1,19 +1,35 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Introduction\n",
+    "\n",
+    "JAX is a composable python based library with auto-grad and composable functional transformation and XLA backend.\n",
+    "This notebook is derived from the the annotated example of mnist training.\n",
+    "We will do a little bit more of fiddling here to understand a few features which set JAX apart and which are critical to get the most out of JAX experience."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "import jax\n",
     "from jax import numpy as jnp\n",
     "\n",
+    "# NN Library, could have used haiku here as well\n",
     "import flax\n",
     "from flax import linen as nn \n",
     "from flax import optim\n",
     "\n",
     "import numpy as np\n",
+    "\n",
+    "# Working with tensorflow datasets\n",
+    "# Other equivalents from PyTorch or third party dataset has not been explored\n",
+    "# However, there is no reason why they would not work\n",
     "import tensorflow_datasets as tfds\n"
    ]
   },
