spatial partitioning sample with comments

--- a/JAX-Spatial-Partitioning-Example-2.ipynb
+++ b/JAX-Spatial-Partitioning-Example-2.ipynb
@@ -9,7 +9,10 @@
     "\n",
     "This notebook is based on [Annotated MNIST](https://colab.sandbox.google.com/github/google/flax/blob/main/docs/getting_started.ipynb#scrollTo=KvuEA8Tw-MYa) example from [FLAX](https://github.com/google/flax)\n",
     "\n",
-    "The primary objective is to illustrate spatial partitioning."
+    "The primary objective is to illustrate spatial partitioning.\n",
+    "\n",
+    "We begin with the default example i.e. model without spatial partitioning.\n",
+    "And then we illustrate spatial partitioning version with JAX pjit API."
    ]
   },
   {
@@ -22,10 +25,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-10-30 23:26:56.766944: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: :/usr/local/lib\n",
-      "2022-10-30 23:26:57.455152: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: :/usr/local/lib\n",
-      "2022-10-30 23:26:57.455242: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: :/usr/local/lib\n",
-      "2022-10-30 23:26:57.455248: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
+      "2022-11-02 17:37:46.589625: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: :/usr/local/lib\n",
+      "2022-11-02 17:37:47.360589: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: :/usr/local/lib\n",
+      "2022-11-02 17:37:47.360668: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: :/usr/local/lib\n",
+      "2022-11-02 17:37:47.360674: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
      ]
     }
    ],
@@ -41,9 +44,19 @@
     "import tensorflow_datasets as tfds     # TFDS for MNIST\n",
     "\n",
     "import os\n",
+    "\n",
+    "# Optional [For profiling only]\n",
     "os.environ['FLAX_PROFILE'] = '1'\n",
     "server = jax.profiler.start_server(1234)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5ffb122",
+   "metadata": {},
+   "source": [
+    "## Download and prepate dataset from TFDS"
    ]
   },
   {
@@ -61,6 +74,14 @@
     "    train_ds['image'] = jnp.float32(train_ds['image']) / 255.\n",
     "    test_ds['image'] = jnp.float32(test_ds['image']) / 255.\n",
     "    return train_ds, test_ds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c28ea83",
+   "metadata": {},
+   "source": [
+    "# Model definition"
    ]
   },
   {
@@ -89,6 +110,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "36d4018d",
+   "metadata": {},
+   "source": [
+    "### Define cross entropy loss and metrics functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "5e499d85",
@@ -114,23 +143,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "4ceeac2c",
+   "cell_type": "markdown",
+   "id": "07c6c333",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def create_train_state(rng, learning_rate, momentum):\n",
-    "    cnn = CNN()\n",
-    "    params = cnn.init(rng, jnp.ones([1, 28, 28, 1]))['params']\n",
-    "    tx = optax.sgd(learning_rate, momentum)\n",
-    "    return train_state.TrainState.create(\n",
-    "        apply_fn=cnn.apply, params=params, tx=tx)"
+    "### Define the train_step \n",
+    "\n",
+    "Following is the un-partitioned version of the train_step. \n",
+    "It works on a single batch. We create the gradiente of the loss function.\n",
+    "And then compute the loss and gradient of loss for the given batch and network state."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "eba12f10",
    "metadata": {},
    "outputs": [],
@@ -149,8 +175,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "832ca971",
+   "metadata": {},
+   "source": [
+    "Evaluation step function, although step is misleading here since we are not working with a batch but the entirity of the eval dataset. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "446c35bf",
    "metadata": {},
    "outputs": [],
@@ -162,8 +196,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "51a0d0e6",
+   "metadata": {},
+   "source": [
+    "Now we are ready to define a train epoch in terms of train_step function"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "ac025ece",
    "metadata": {},
    "outputs": [],
@@ -190,8 +232,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0e4c58df",
+   "metadata": {},
+   "source": [
+    "And eval_model in terms of eval_step function."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "51808b65",
    "metadata": {},
    "outputs": [],
@@ -204,6 +254,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5e9a41ce",
+   "metadata": {},
+   "source": [
+    "Create train state, achieves two objectives: \n",
+    "1. Initialize the model\n",
+    "2. Extract the param tree (train state)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "4ceeac2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_train_state(rng, learning_rate, momentum):\n",
+    "    cnn = CNN()\n",
+    "    params = cnn.init(rng, jnp.ones([1, 28, 28, 1]))['params']\n",
+    "    tx = optax.sgd(learning_rate, momentum)\n",
+    "    return train_state.TrainState.create(\n",
+    "        apply_fn=cnn.apply, params=params, tx=tx)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a98884b7",
+   "metadata": {},
+   "source": [
+    "# Run training (with No Spatial Partioning)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "7ff212d0",
@@ -213,8 +296,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-10-30 23:27:01.923139: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: :/usr/local/lib\n",
-      "2022-10-30 23:27:01.923179: W tensorflow/compiler/xla/stream_executor/cuda/cuda_driver.cc:265] failed call to cuInit: UNKNOWN ERROR (303)\n"
+      "2022-11-02 17:37:52.317168: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: :/usr/local/lib\n",
+      "2022-11-02 17:37:52.317206: W tensorflow/compiler/xla/stream_executor/cuda/cuda_driver.cc:265] failed call to cuInit: UNKNOWN ERROR (303)\n"
      ]
     }
    ],
@@ -275,7 +358,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "tcmalloc: large alloc 1178992640 bytes == 0x14d87c000 @  0x7f7c91209680 0x7f7c9122a824 0x7f7aeea420da 0x7f7aec45d4e0 0x7f7aec45d459 0x7f7aec2e1d38 0x7f7aec2e1c39 0x7f7aeb54e908 0x7f7aeb57eacb 0x7f7aebf1ce75 0x7f7aebf1f4b9 0x7f7aee645665 0x7f7aee64a6ab 0x7f7aee6514e5 0x7f7aee86ddbe 0x7f7c90fdd609 0x7f7c91117163\n"
+      "tcmalloc: large alloc 1178992640 bytes == 0x14f7ea000 @  0x7f2ecbe00680 0x7f2ecbe21824 0x7f2d296390da 0x7f2d270544e0 0x7f2d27054459 0x7f2d26ed8d38 0x7f2d26ed8c39 0x7f2d26145908 0x7f2d26175acb 0x7f2d26b13e75 0x7f2d26b164b9 0x7f2d2923c665 0x7f2d292416ab 0x7f2d292484e5 0x7f2d29464dbe 0x7f2ecbbd4609 0x7f2ecbd0e163\n"
      ]
     },
     {
@@ -306,6 +389,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e7b269cb",
+   "metadata": {},
+   "source": [
+    "# Spatial Partitioning\n",
+    "\n",
+    "Spatial partioning can be viewed as a special case of data parallelism where we parition input images along the X and y dimension instead of the batch dimension (seen in common data parallelism).\n",
+    "\n",
+    "In the following sections we will use JAX PJIT API to express spatial partitioning.\n",
+    "PJIT is a general purpose API which allows to express partioning intent for the inputs and outputs of a function.\n",
+    "This intent is then automatically propagated through the function graph (using XLA SPMD) to create a partitioned version of the function with almost no manual effort required to update the model.\n",
+    "For more details on PJIT please refer to [this tutorial](https://jax.readthedocs.io/en/latest/jax-101/08-pjit.html)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "id": "6e7f6555",
@@ -318,6 +416,19 @@
     "from jax.experimental.pjit import pjit\n",
     "import numpy as np\n",
     "import functools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28832f3a",
+   "metadata": {},
+   "source": [
+    "## Step-1 Define a device mesh\n",
+    "device mesh is the logical view of the physical device array expressed with named axes.\n",
+    "These axes will subsequently be referenced to express partitioning intent or annotation.\n",
+    "It is important that each of these axis correspond to a physical TORUS (1-D or 2-D). \n",
+    "In the current example we are working with a TPU device i.e. 4 chip configuration.\n",
+    "More larger slice shape awareness of [mesh topologies](https://cloud.google.com/tpu/docs/types-topologies) is very critical. And to get the logical mesh aligned with physical axes we recommend using [mesh utils](https://github.com/google/jax/blob/main/jax/experimental/mesh_utils.py#L221)"
    ]
   },
   {
@@ -346,6 +457,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ddadfb24",
+   "metadata": {},
+   "source": [
+    "### Using PJIT to express partition intent\n",
+    "Create a version of train_step with partitioning intent on the inputs.\n",
+    "Notice that we are using 'x', 'y' mesh axis to define the partitioning for image's X and Y dimensions (spatial partitioning)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "id": "e372baf7",
@@ -361,6 +482,14 @@
     "                      ),\n",
     "    out_axis_resources=None\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abfaec37",
+   "metadata": {},
+   "source": [
+    "p_train_epoch method is same as train_epoch except it is using p_train_step instead of train_step"
    ]
   },
   {
@@ -392,6 +521,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "50404241",
+   "metadata": {},
+   "source": [
+    "Express simila partition intent for eval_step"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "28eb1c2c",
@@ -416,22 +553,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c1c09b25",
+   "metadata": {},
+   "source": [
+    "Run training with spatial partitioning"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "99712111",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "train epoch: 1, loss: 0.5606998801231384, accuracy: 78.46511602401733\n",
-      " test epoch: 1, loss: 0.52, accuracy: 80.20\n",
-      "train epoch: 2, loss: 0.46477749943733215, accuracy: 82.48080611228943\n",
-      " test epoch: 2, loss: 0.45, accuracy: 83.08\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for epoch in range(1, num_epochs + 1):\n",
     "    # Use a separate PRNG key to permute image data during shuffling\n",
