spatial partitioning sample with comments

--- a/JAX-Spatial-Partitioning-Example-2.ipynb
+++ b/JAX-Spatial-Partitioning-Example-2.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5ffb122",
+   "id": "ad7e6bb4",
    "metadata": {},
    "source": [
     "## Download and prepate dataset from TFDS"
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c28ea83",
+   "id": "212b54ea",
    "metadata": {},
    "source": [
     "# Model definition"
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36d4018d",
+   "id": "811efcfd",
    "metadata": {},
    "source": [
     "### Define cross entropy loss and metrics functions"
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07c6c333",
+   "id": "c0539d00",
    "metadata": {},
    "source": [
     "### Define the train_step \n",
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "832ca971",
+   "id": "57943970",
    "metadata": {},
    "source": [
     "Evaluation step function, although step is misleading here since we are not working with a batch but the entirity of the eval dataset. "
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51a0d0e6",
+   "id": "20f9fc04",
    "metadata": {},
    "source": [
     "Now we are ready to define a train epoch in terms of train_step function"
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e4c58df",
+   "id": "74c1e72a",
    "metadata": {},
    "source": [
     "And eval_model in terms of eval_step function."
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e9a41ce",
+   "id": "580582cf",
    "metadata": {},
    "source": [
     "Create train state, achieves two objectives: \n",
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a98884b7",
+   "id": "49a7b2fe",
    "metadata": {},
    "source": [
     "# Run training (with No Spatial Partioning)"
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7b269cb",
+   "id": "96318b66",
    "metadata": {},
    "source": [
     "# Spatial Partitioning\n",
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28832f3a",
+   "id": "7cea4f0f",
    "metadata": {},
    "source": [
     "## Step-1 Define a device mesh\n",
@@ -458,10 +458,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddadfb24",
+   "id": "766d57a4",
    "metadata": {},
    "source": [
-    "### Using PJIT to express partition intent\n",
+    "## Step-2 Using PJIT to express partition intent\n",
     "Create a version of train_step with partitioning intent on the inputs.\n",
     "Notice that we are using 'x', 'y' mesh axis to define the partitioning for image's X and Y dimensions (spatial partitioning)"
    ]
@@ -486,10 +486,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abfaec37",
+   "id": "579a8f47",
    "metadata": {},
    "source": [
-    "p_train_epoch method is same as train_epoch except it is using p_train_step instead of train_step"
+    "## Step-3 update other functions to use pjit version of train_step."
    ]
   },
   {
@@ -522,10 +522,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50404241",
+   "id": "6372a9d2",
    "metadata": {},
    "source": [
-    "Express simila partition intent for eval_step"
+    "Express similar partition intent for eval_step"
    ]
   },
   {
@@ -554,18 +554,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1c09b25",
+   "id": "41511f09",
    "metadata": {},
    "source": [
-    "Run training with spatial partitioning"
+    "# Run training with spatial partitioning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "99712111",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train epoch: 1, loss: 0.5606998801231384, accuracy: 78.46511602401733\n",
+      " test epoch: 1, loss: 0.52, accuracy: 80.20\n",
+      "train epoch: 2, loss: 0.46477749943733215, accuracy: 82.48080611228943\n",
+      " test epoch: 2, loss: 0.45, accuracy: 83.08\n"
+     ]
+    }
+   ],
    "source": [
     "for epoch in range(1, num_epochs + 1):\n",
     "    # Use a separate PRNG key to permute image data during shuffling\n",
