spatial partitioning sample with comments

--- a/JAX-Spatial-Partitioning-Example-2.ipynb
+++ b/JAX-Spatial-Partitioning-Example-2.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad7e6bb4",
+   "id": "750de130",
    "metadata": {},
    "source": [
     "## Download and prepate dataset from TFDS"
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "212b54ea",
+   "id": "f69779a4",
    "metadata": {},
    "source": [
     "# Model definition"
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "811efcfd",
+   "id": "95add6e6",
    "metadata": {},
    "source": [
     "### Define cross entropy loss and metrics functions"
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0539d00",
+   "id": "5e647065",
    "metadata": {},
    "source": [
     "### Define the train_step \n",
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57943970",
+   "id": "93872eda",
    "metadata": {},
    "source": [
     "Evaluation step function, although step is misleading here since we are not working with a batch but the entirity of the eval dataset. "
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20f9fc04",
+   "id": "c3667c4d",
    "metadata": {},
    "source": [
     "Now we are ready to define a train epoch in terms of train_step function"
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74c1e72a",
+   "id": "860c178a",
    "metadata": {},
    "source": [
     "And eval_model in terms of eval_step function."
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "580582cf",
+   "id": "da6f101c",
    "metadata": {},
    "source": [
     "Create train state, achieves two objectives: \n",
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49a7b2fe",
+   "id": "f7699f9d",
    "metadata": {},
    "source": [
     "# Run training (with No Spatial Partioning)"
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96318b66",
+   "id": "8c78c67b",
    "metadata": {},
    "source": [
     "# Spatial Partitioning\n",
@@ -420,13 +420,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cea4f0f",
+   "id": "baadb0e1",
    "metadata": {},
    "source": [
     "## Step-1 Define a device mesh\n",
     "device mesh is the logical view of the physical device array expressed with named axes.\n",
     "These axes will subsequently be referenced to express partitioning intent or annotation.\n",
-    "It is important that each of these axis correspond to a physical TORUS (1-D or 2-D). \n",
+    "It is important that each of these axis correspond to a physical torus (1-D or 2-D). \n",
     "In the current example we are working with a TPU device i.e. 4 chip configuration.\n",
     "More larger slice shape awareness of [mesh topologies](https://cloud.google.com/tpu/docs/types-topologies) is very critical. And to get the logical mesh aligned with physical axes we recommend using [mesh utils](https://github.com/google/jax/blob/main/jax/experimental/mesh_utils.py#L221)"
    ]
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "766d57a4",
+   "id": "f2025cda",
    "metadata": {},
    "source": [
     "## Step-2 Using PJIT to express partition intent\n",
@@ -486,10 +486,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "579a8f47",
+   "id": "cb3955e6",
    "metadata": {},
    "source": [
-    "## Step-3 update other functions to use pjit version of train_step."
+    "## Step-3 update other functions to use pjit version of train_step"
    ]
   },
   {
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6372a9d2",
+   "id": "b4c0e3ee",
    "metadata": {},
    "source": [
     "Express similar partition intent for eval_step"
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41511f09",
+   "id": "b6189f6a",
    "metadata": {},
    "source": [
     "# Run training with spatial partitioning"
