spatial partitioning sample with comments

--- a/JAX-Spatial-Partitioning-Example-2.ipynb
+++ b/JAX-Spatial-Partitioning-Example-2.ipynb
@@ -395,12 +395,12 @@
    "source": [
     "# Spatial Partitioning\n",
     "\n",
-    "Spatial partioning can be viewed as a special case of data parallelism where we parition input images along the X and y dimension instead of the batch dimension (seen in common data parallelism).\n",
+    "Spatial partioning can be viewed as a special case of data parallelism where we parition input images along the X and Y dimension instead of the batch dimension (seen in common data parallelism).\n",
     "\n",
     "In the following sections we will use JAX PJIT API to express spatial partitioning.\n",
     "PJIT is a general purpose API which allows to express partioning intent for the inputs and outputs of a function.\n",
-    "This intent is then automatically propagated through the function graph (using XLA SPMD) to create a partitioned version of the function with almost no manual effort required to update the model.\n",
-    "For more details on PJIT please refer to [this tutorial](https://jax.readthedocs.io/en/latest/jax-101/08-pjit.html)"
+    "This intent is then automatically propagated through the function graph (using XLA SPMD) to create a partitioned version of the function with almost no manual effort required to update the model. This gives a power way to express a variety of parallelisms including SPMD based tensor and pipeline parallelisms, fully sharded data parallelism and spatial partitioning.\n",
+    "For more details on PJIT please refer to [this tutorial].(https://jax.readthedocs.io/en/latest/jax-101/08-pjit.html)"
    ]
   },
   {
@@ -424,11 +424,11 @@
    "metadata": {},
    "source": [
     "## Step-1 Define a device mesh\n",
-    "device mesh is the logical view of the physical device array expressed with named axes.\n",
+    "The device mesh is a logical view of the physical device array expressed with named axes.\n",
     "These axes will subsequently be referenced to express partitioning intent or annotation.\n",
     "It is important that each of these axis correspond to a physical torus (1-D or 2-D). \n",
     "In the current example we are working with a TPU device i.e. 4 chip configuration.\n",
-    "More larger slice shape awareness of [mesh topologies](https://cloud.google.com/tpu/docs/types-topologies) is very critical. And to get the logical mesh aligned with physical axes we recommend using [mesh utils](https://github.com/google/jax/blob/main/jax/experimental/mesh_utils.py#L221)"
+    "For larger slice shape awareness of [mesh topologies](https://cloud.google.com/tpu/docs/types-topologies) is very critical to construct the optimal device mesh. We recommend using [mesh utils](https://github.com/google/jax/blob/main/jax/experimental/mesh_utils.py#L221) in such scenarios."
    ]
   },
   {
