iterating on data loader

--- a/gpt-repro-xla/play.ipynb
+++ b/gpt-repro-xla/play.ipynb
@@ -418,6 +418,54 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "\n",
+    "class DataLoaderLite:\n",
+    "    def __init__(self, B, T, process_rank, num_processes, split):\n",
+    "        self.B = B\n",
+    "        self.T = T\n",
+    "        self.process_rank = process_rank\n",
+    "        self.num_processes = num_processes\n",
+    "        assert split in {'train', 'val'}\n",
+    "\n",
+    "        # get the shard filenames\n",
+    "        data_root = \"sample-data\"\n",
+    "        shards = os.listdir(data_root)\n",
+    "        shards = [s for s in shards if split in s]\n",
+    "        shards = sorted(shards)\n",
+    "        shards = [os.path.join(data_root, s) for s in shards]\n",
+    "        self.shards = shards\n",
+    "        assert len(shards) > 0, f\"no shards found for split {split}\"\n",
+    "        if master_process:\n",
+    "            print(f\"found {len(shards)} shards for split {split}\")\n",
+    "        self.reset()\n",
+    "\n",
+    "    def reset(self):\n",
+    "        # state, init at shard zero\n",
+    "        self.current_shard = 0\n",
+    "        self.tokens = load_tokens(self.shards[self.current_shard])\n",
+    "        self.current_position = self.B * self.T * self.process_rank\n",
+    "\n",
+    "    def next_batch(self):\n",
+    "        B, T = self.B, self.T\n",
+    "        buf = self.tokens[self.current_position : self.current_position+B*T+1]\n",
+    "        x = (buf[:-1]).view(B, T) # inputs\n",
+    "        y = (buf[1:]).view(B, T) # targets\n",
+    "        # advance the position in the tensor\n",
+    "        self.current_position += B * T * self.num_processes\n",
+    "        # if loading the next batch would be out of bounds, advance to next shard\n",
+    "        if self.current_position + (B * T * self.num_processes + 1) > len(self.tokens):\n",
+    "            self.current_shard = (self.current_shard + 1) % len(self.shards)\n",
+    "            self.tokens = load_tokens(self.shards[self.current_shard])\n",
+    "            self.current_position = B * T * self.process_rank\n",
+    "        return x, y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -437,7 +485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
