--- a/jax-basics/shardmap.ipynb
+++ b/jax-basics/shardmap.ipynb
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "id": "f9824c37",
    "metadata": {},
    "outputs": [],
@@ -693,6 +693,135 @@
     "    C = jit_sharded_f(A_x, X)\n",
     "    \n",
     "print(allclose(C, A @ X))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "d2dd56a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Y = jax.random.normal(jax.random.key(1), (4 * K, N))\n",
+    "\n",
+    "jit_sharded_f = jax.jit(shard_map(\n",
+    "  collective_matmul_allgather_lhs_non_contracting_bidi,\n",
+    "  mesh,\n",
+    "  in_specs=(P('x', None), P('x', None)),\n",
+    "  out_specs=P('x', None),\n",
+    "  check_rep=False\n",
+    "  ))\n",
+    "\n",
+    "X_x = jax.device_put(Y, NamedSharding(mesh, P('x', None)))\n",
+    "with jax.profiler.trace(\"/tmp/jax-trace\"):\n",
+    "    C = jit_sharded_f(A_x, X_x)\n",
+    "    \n",
+    "#print(allclose(C, A @ X))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "7caab1cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from jax.tree_util import tree_map, tree_all\n",
+    "from functools import partial\n",
+    "import jax\n",
+    "import jax.numpy as jnp\n",
+    "from jax import jit\n",
+    "\n",
+    "from jax.sharding import Mesh, NamedSharding, PartitionSpec as P\n",
+    "from jax.experimental import mesh_utils\n",
+    "from jax.experimental.shard_map import shard_map\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "def allclose(a, b):\n",
+    "    return tree_all(\n",
+    "        tree_map(partial(jnp.allclose, atol=1e-2, rtol=1e-2), a, b)\n",
+    "    )\n",
+    "\n",
+    "M, K, N = 16384, 1024, 2048\n",
+    "A = jax.random.normal(jax.random.key(0), (M, K))\n",
+    "X = jax.random.normal(jax.random.key(1), (K, N))\n",
+    "\n",
+    "devices = mesh_utils.create_device_mesh((4, 1))\n",
+    "mesh = Mesh(devices, axis_names=('x', 'y'))\n",
+    "\n",
+    "lhs_spec = P(None, 'x')\n",
+    "rhs_spec = P('x', None)\n",
+    "\n",
+    "A_x = jax.device_put(A, NamedSharding(mesh, lhs_spec))\n",
+    "X_x = jax.device_put(X, NamedSharding(mesh, rhs_spec))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "4ea227cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "@partial(shard_map, mesh=mesh, in_specs=(lhs_spec, rhs_spec),\n",
+    "         out_specs=rhs_spec)\n",
+    "def matmul_psumscatter(lhs_block, rhs_block):\n",
+    "  out_summand = lhs_block @ rhs_block\n",
+    "  return jax.lax.psum_scatter(out_summand, 'x', tiled=True)\n",
+    "\n",
+    "out = matmul_psumscatter(A_x, X_x)\n",
+    "print(jnp.allclose(out, A_x @ X_x, atol=1e-3, rtol=1e-3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "e0874ee1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@partial(shard_map, mesh=mesh, in_specs=(lhs_spec, rhs_spec),\n",
+    "         out_specs=rhs_spec)\n",
+    "def matmul_psumscatter_overlapped(lhs_block, rhs_block):\n",
+    "  size = jax.lax.psum(1, 'x')\n",
+    "  idx = jax.lax.axis_index('x')\n",
+    "  shift = partial(jax.lax.ppermute, axis_name='x',\n",
+    "                  perm=[(i, (i - 1) % size) for i in range(size)])\n",
+    "  lhs_block = lhs_block.reshape(size, -1, lhs_block.shape[1])  # split 1st axis\n",
+    "\n",
+    "  out_summand = lhs_block[(idx + 1) % size] @ rhs_block\n",
+    "  for i in range(1, size):\n",
+    "    out_summand = shift(out_summand)\n",
+    "    out_summand += lhs_block[(idx + i + 1) % size] @ rhs_block\n",
+    "  return out_summand"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "59f32e9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "out = matmul_psumscatter_overlapped(A_x, X_x)\n",
+    "print(jnp.allclose(out, A_x @ X_x,  atol=1e-3, rtol=1e-3))"
    ]
   },
   {
